catkin_ws/logs/rgbd_slam/build.make.029.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/rgbd_slam/src/main.cpp:152:80: warning: missing terminating ' character [enabled by default]
  Mat map1 = imread(file_name, CV_LOAD_IMAGE_ANYCOLOR | CV_LOAD_IMAGE_ANYDEPTH);'
                                                                                ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/rgbd_slam/src/main.cpp:152:2: error: missing terminating ' character
  Mat map1 = imread(file_name, CV_LOAD_IMAGE_ANYCOLOR | CV_LOAD_IMAGE_ANYDEPTH);'
  ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/rgbd_slam/src/main.cpp:153:2: warning: missing terminating ' character [enabled by default]
  '
  ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/rgbd_slam/src/main.cpp:153:2: error: missing terminating ' character
make[2]: *** [CMakeFiles/rgbd_slam.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/rgbd_slam.dir/all] Error 2
make: *** [all] Error 2
